# AG2-SDLC

./: .gitignore  README.md  STREAMLINED_WORKFLOW_README.md  config.yaml  debug_llm_responses.py  env.example  pyproject.toml  requirements.txt  test_complete_workflow.py  test_comprehensive_repo_analyzer.py  test_fixed_analyzer.py  test_streamlined_workflow.py
agents/: __init__.py
agents/frontend_analyzer/: __init__.py  architect_agent.py  code_generation.py  code_repo_analyzer.py  complete_workflow.py  comprehensive_code_repo_analyzer.py  design_analyzer.py  design_analyzer_agent.py  design_architect.py  enhanced_code_repo_analyzer.py  enhanced_repository_analyzer.py  frontend_workflow.py  real_hybrid_analyzer.py  smart_code_generation_agent.py  streamlined_workflow.py
agents/frontend_analyzer/tools/: component_analyzer.py  enhanced_react_ast_parser.py  react_ast_parser.py
agents/repository_analyzer/: __init__.py  advanced_ast_parser.py  api_analyzer.py  dataflow_analyzer.py  helpers.py  pattern_detector.py  repository_analyzer.py  semantic_analyzer.py  simple_analyzer.py  ultimate_analyzer.py
core/: __init__.py  orchestrator.py
core/config/: __init__.py  agent_config.py  prompts.py  settings.py
core/schemas/: __init__.py  base.py  workflow_input.py  workflow_output.py
core/tools/: __init__.py  file_utils.py  llm_client.py  validation_utils.py
data/inputs/sample_repositories/booking_website_api/: README.md  database.py  main.py  models.py  requirements.txt  schemas.py  services.py
data/inputs/sample_repositories/fastapi_sample_app/: README.md  database.py  main.py  models.py  requirements.txt  schemas.py  services.py
data/inputs/sample_repositories/react_weather_app/: README.md  SETUP_CHANGES.md  design-document.md  index.html  new_requirements.md  package-lock.json  package.json  requirements.md  test-api.html
data/inputs/sample_repositories/react_weather_app/public/: index.html
data/inputs/sample_repositories/react_weather_app/src/: App.css  App.tsx  index.css
data/inputs/sample_repositories/react_weather_app/src/components/: SearchForm.css  SearchForm.tsx  WeatherCard.css  WeatherCard.tsx  WeatherCardSimple.tsx
data/inputs/sample_repositories/react_weather_app/src/services/: weatherService.ts
data/inputs/sample_repositories/react_weather_app/src/types/: weather.ts
data/outputs/: booking_website_analysis_results.json  ultimate_repository_analysis_results.json
data/outputs/streamlined_workflow/: architect_output.json  code_generator_output.json  compact_workflow_output.json  complete_workflow_output.json  design_analyzer_output.json  repository_analyzer_output.json
docs/: agent_architecture_explanation.md
scripts/: repo_analyzer.py  test_advanced_analyzer.py  test_booking_analyzer.py  test_repository_analyzer.py  test_simple_analyzer.py  test_ultimate_analyzer.py
tests/: __init__.py
tests/unit/: __init__.py  test_repository_analyzer.py
workflows/: __init__.py  workflow1_orchestrator.py
